# BIMFx

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/validation_report/: summary.csv
bimfx/: __init__.py
bimfx/MFS/: geometry.py  solvers.py
bimfx/utils/: plotting.py  printing.py
docs/: Makefile  api.rst  benchmarks.md  conf.py  differentiable.md  examples.md  fci.md  gallery.md  index.md  io.md  make.bat  performance.md  preprocessing.md  quickstart.md  references.md  roadmap.md  theory.md  tracing.md  validation.md  workflow.md  your_geometry.md
docs/_generated/: bimfx.fieldline.trace_fieldline_rk4.rst  bimfx.solve_bim.rst  bimfx.solve_mfs.rst  bimfx.vacuum.VacuumField.rst
docs/_static/benchmark/: benchmarks.csv  benchmarks.md
examples/: analyze_flux_surfaces_demo.py  compare_mfs_bim_inputs.py  convert_boundary.py  fit_flux_surfaces_demo.py  generate_benchmark_gallery.py  generate_gallery_figures.py  pipeline.toml  solve_fci_demo.py  solve_from_vmec_wout.py  solve_vacuum_from_csv.py  trace_and_poincare_demo.py  validate_vacuum_solver.py  validation_report.py
inputs/: knot_tube.csv  knot_tube_normals.csv  wout_SLAM_6_coils.csv  wout_SLAM_6_coils_normals.csv
notebooks/: jax_optimization.ipynb  quickstart.ipynb
run/: main_mfs.py
scripts/: compare_validation_baseline.py
src/bimfx/: __init__.py  _version.py  cli.py  fieldline.py  jax_linalg.py  jax_solvers.py  objectives.py  pipeline.py  sweep.py  tracing.py  validation.py
src/bimfx/bim/: __init__.py  solver.py
src/bimfx/fci/: __init__.py  analysis.py  plots.py  (+4 more)
tests/: test_fastsum.py  test_fci.py  test_fci_workflows.py  test_inputs_integration.py  test_io_boundary.py  test_jax_linalg.py  test_jax_solvers.py  test_kernel_cache.py  test_pipeline.py  test_sweep.py  test_tracing.py  test_vacuum_solvers.py  test_validation.py
(+15 files in other folders)
