[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "bimfx"
version = "0.1.0"
description = "Vacuum magnetic field solvers (BIM + MFS) for Laplace's equation in arbitrary 3D geometry."
readme = "README.md"
authors = [
  { name = "UWPlasma Group", email = "rogerio.jorge@wisc.edu" }
]
license = { text = "MIT" }
dependencies = [
  "jax",
  "jaxlib",
  "numpy>=1.20",
  "scipy>=1.9",
]
requires-python = ">=3.8"

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest>=7", "ruff>=0.1.0"]
docs = ["sphinx>=7", "furo>=2024.1.29", "myst-parser>=2.0.0", "sphinx-autodoc-typehints>=1.25.0"]
io = ["trimesh>=4.0.0"]
fci = ["scikit-image>=0.21"]

[project.urls]
Homepage = "https://github.com/uwplasma/BIMFx"
Repository = "https://github.com/uwplasma/BIMFx"

[project.scripts]
bimfx = "bimfx.cli:main"
